resources/policy/constraints/asmauthzpolicyenforcesourceprincipals.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: |-
      Requires that Istio AuthorizationPolicy "from" field, when defined, has source principles, which must be set to something other than "*".
      https://istio.io/latest/docs/reference/config/security/authorization-policy/
    metadata.gatekeeper.sh/title: ASM AuthorizationPolicy Enforcement Principals
  labels:
    app.kubernetes.io/managed-by: deployments.plural.sh
  name: asmauthzpolicyenforcesourceprincipals
spec:
  crd:
    spec:
      names:
        kind: AsmAuthzPolicyEnforceSourcePrincipals
      validation:
        legacySchema: false
  targets:
  - rego: |
      package asm.security.authorizationpolicy

      spec := input.review.object.spec

      is_authzpolicy(kind) {
        kind.kind == "AuthorizationPolicy"
        kind.group == "security.istio.io"
      }

      ################
      # From Source Principals
      ################

      # spec.rules[].from[].source.principals does not exist
      violation[{"msg": msg}] {
        is_authzpolicy(input.review.kind)
        from := spec.rules[_].from
        not contains_principals(from)
        msg := "source.principals does not exist"
      }

      contains_principals(from) {
        from[_].source.principals
      }

      # spec.rules[].from[].source.principals[] does not contain '*'
      violation[{"msg": msg}] {
        is_authzpolicy(input.review.kind)
        principal := spec.rules[_].from[_].source.principals[_]
        principal == "*"
        msg := "source.principals[] cannot be '*'"
      }
    target: admission.k8s.gatekeeper.sh
